# mbse-course-practice

./: .gitignore  AGENTS.md  CONTEXT.md  README.md  index.html  package-lock.json  package.json  tsconfig.json
[object Promise]/semantic-fixture/: 10-requirements.sysml  (+2 more)
docs/: course-practice-project-plan.md
scripts/: inspect-tauri-bundle.mjs  prepare-tauri-bundle.mjs  run-tauri.mjs  verify-bundled-sidecar.mjs
sidecar/: agent-sdk-sidecar-failure.d.mts  agent-sdk-sidecar-failure.mjs  agent-sdk-sidecar.d.mts  agent-sdk-sidecar.mjs  agent-tool-policy.d.mts  agent-tool-policy.mjs  agent-trace-protocol.d.ts  agent-trace-protocol.mjs  agent-trace-shared.d.mts  agent-trace-shared.mjs  candidate-verification-tool.d.mts  candidate-verification-tool.mjs  candidate-workspace.d.mts  candidate-workspace.mjs  extraction-task.d.mts  extraction-task.mjs  modeling-task.d.mts  modeling-task.mjs  modeling-workspace.mjs  sysml-validator.mjs  sysml2-backend.d.ts  sysml2-backend.mjs  yield-termination.d.mts  yield-termination.mjs
src/: AgentDraftReviewPanel.tsx  AgentExecutionTrace.tsx  App.tsx  main.tsx  styles.css  useAgentTraceSessions.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: agent_sidecar.rs  lib.rs  main.rs  workbench_project.rs
src-tauri/tests/: agent_sidecar.rs
tests/: agent-sidecar.test.ts  model-generation.test.ts  modeling-workspace.test.mjs  project-contract.test.ts  setup.ts  sidecar-sysml2-backend.d.ts  sysml-validator.test.mjs  workbench-project-persistence.test.ts  yield-termination.test.mjs
(+60 files in other folders)
